@@ -635,7 +635,7 @@ class BboxBase(TransformNode):
         Return a new :class:`Bbox` that is padded on all four sides by
         the given value.
         """
-        points = self._points
+        points = self.get_points()
         return Bbox(points + [[-p, -p], [p, p]])
 
     def translated(self, tx, ty):
